SavedRequest -> .well-known/appspecific 으로 redirect 되는 현상 수정